Support configurable sync commit height

--- a/conf/node-default.properties
+++ b/conf/node-default.properties
@@ -86,6 +86,11 @@
 ## Warning: a high value (> 15000 rows) is known to generate queries too big for an SQLite backend
 # DB.InsertBatchMaxSize = 10000
 
+## Commit multiple blocks in a single database transaction while syncing
+# DB.CommitBlocks = 20
+## After this block height, commit every block individually
+# DB.SyncCommitBlocks = 1400000
+
 ## Enable the indirect incoming tracker service. This allows you to see transactions where you are paid
 ## but are not the direct recipient eg. Multi-Outs.
 # node.indirectIncomingService.enable = true
