--- a/conf/junit/node-default.properties
+++ b/conf/junit/node-default.properties
@@ -8,3 +8,6 @@ node.network = signum.net.MockNetwork
 #DB.Url=jdbc:h2:mem:signum-mock;DB_CLOSE_ON_EXIT=FALSE
 # Database connection JDBC url
 DB.Url=jdbc:sqlite:file:./db/signum-mock.sqlite.db
+
+# Commit each block individually during tests
+DB.CommitBlocks=1
